<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MovieDatabase</string>

    <string name="nav_header_app_version">App Version: </string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_movie_list">Collection</string>
    <string name="nav_search_movie">Movie Search</string>

    <string name="login_title">Sign in</string>
    <string name="login_prompt_username">Username</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_store_credentials">Store Username/Password</string>
    <string name="login_action_sign_in">Sign in</string>
    <string name="login_error_invalid_password">This password is invalid</string>
    <string name="login_error_incorrect_password">This password is incorrect</string>
    <string name="login_error_field_required">This field is required</string>

    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_label_number_of_movies">Number of Movies:</string>
    <string name="dashboard_label_number_of_genres">Number of Genres:</string>
    <string name="dashboard_label_number_of_lent_movies">Number of Movies (lent):</string>
    <string name="dashboard_progress_load_statistics">Loading Collection Statistics</string>

    <string name="movielist_title">Collection</string>
    <string name="movielist_menu_sort_collection">Sort</string>
    <string name="movielist_menu_filter_collection">Filter</string>
    <string name="movielist_menu_search_movie">Search</string>
    <string name="movielist_progress_load_movies">Loading Movie Collection</string>

    <string name="moviesearch_title">Movie Search</string>
    <string name="moviesearch_search_button">Search</string>
    <string name="moviesearch_search_field_hint">Search Text</string>
    <string name="moviesearch_progress_search_movies">Searching for Movies</string>

    <string name="moviedetail_menu_add_to_collection">Add to Collection</string>
    <string name="moviedetail_menu_remove_from_collection">Remove to Collection</string>
    <string name="moviedetail_menu_lend_movie">Lend Movie</string>
    <string name="moviedetail_menu_movie_returned">Movie returned (was lent)</string>
    <string name="moviedetail_save_movie_successful">Successfully saved movie: %s</string>
    <string name="moviedetail_delete_movie_successful">Successfully deleted movie: %s</string>
    <string name="moviedetail_label_lent_movie_to">Movie is lent to: %s</string>
    <string name="moviedetail_progress_load_movie">Loading Movie</string>
    <string name="moviedetail_progress_add_movie_to_collection">Adding Movie to Collection</string>
    <string name="moviedetail_progress_remove_movie_from_collection">Removing Movie from Collection</string>
    <string name="moviedetail_progress_lend_movie">Mark Movie as lent</string>
    <string name="moviedetail_progress_remove_lent_movie_info">Mark Movie as returned</string>
    <string name="moviedetail_progress_get_people">Load people names</string>
    <string name="moviedetail_question_remove_movie_message">Remove from Collection?</string>
    <string name="moviedetail_question_remove_movie_submit">Remove</string>
    <string name="moviedetail_question_remove_movie_cancel">Cancel</string>

    <string name="moviefiltermanager_title">Set Filter</string>
    <string name="moviefiltermanager_submit_button">Approve</string>
    <string name="moviefiltermanager_genre_header">Genre Filter</string>
    <string name="moviefiltermanager_format_header">Format Filter</string>
    <string name="moviefiltermanager_selected_genres_count">(%s ausgewählt)</string>
    <string name="moviefiltermanager_selected_formats_count">(%s ausgewählt)</string>

    <string name="moviecomparatorchoice_title">Select Order</string>
    <string name="moviecomparatorchoice_submit_button">Approve</string>
    <string name="moviecomparatorchoice_listitem_title_asc_comparator">Sort By Title (Ascending)</string>
    <string name="moviecomparatorchoice_listitem_title_desc_comparator">Sort By Title (Descending)</string>
    <string name="moviecomparatorchoice_listitem_length_asc_comparator">Sort By Length (Ascending)</string>
    <string name="moviecomparatorchoice_listitem_length_desc_comparator">Sort By Length (Descending)</string>

    <string name="task_search_movie_error_message">Unknown Error while searching for movie: %s</string>
    <string name="task_get_search_movie_error_message">Unknown Error while loading searched movie: %s</string>
    <string name="task_save_movie_error_message">Unknown Error while saving movie: %s</string>
    <string name="task_get_movies_error_message">Unknown Error while fetching movies: %s</string>
    <string name="task_get_movie_error_message">Unknown Error while fetching movie: %s</string>
    <string name="task_get_genres_error_message">Unknown Error while fetching genres: %s</string>
    <string name="task_delete_movie_error_message">Unknown Error while deleting movie: %s</string>
    <string name="task_get_statistics_error_message">Unknown Error while fetching statistics: %s</string>
    <string name="task_get_lent_movie_info_error_message">Unknown Error while getting information if movie is lent: %s</string>
    <string name="task_lend_movie_error_message">Unknown Error while lending movie: %s</string>
    <string name="task_lend_movie_delete_error_message">Unknown Error while removing lent movie info: %s</string>
    <string name="task_get_people_error_message">Unknown Error while fetching people names: %s</string>

    <string name="dialog_people_name_selection_submit_button">Submit</string>
    <string name="dialog_people_name_selection_cancel_button">Cancel</string>
    <string name="dialog_people_name_title">Enter Name</string>
    <string name="dialog_movie_format_selection_title">Select Format</string>
    <string name="dialog_movie_format_selection_dvd">DVD</string>
    <string name="dialog_movie_format_selection_blueray">Blu-Ray</string>
    <string name="dialog_movie_format_selection_vhs">VHS</string>
</resources>
