<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MyTheme.Statistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <TextView
        style="@style/MyTheme.Statistics.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/dashboard_label_number_of_movies" />

    <TextView
        android:id="@+id/number_of_movies"
        style="@style/MyTheme.Statistics.Text.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0" />

    <TextView
        style="@style/MyTheme.Statistics.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/dashboard_label_number_of_genres" />

    <TextView
        android:id="@+id/number_of_genres"
        style="@style/MyTheme.Statistics.Text.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1" />

    <TextView
        style="@style/MyTheme.Statistics.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/dashboard_label_number_of_lent_movies" />

    <TextView
        android:id="@+id/number_of_lent_movies"
        style="@style/MyTheme.Statistics.Text.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2" />
</GridLayout>
